2008-10-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/metadata/xmp-encode.c
	* plug-ins/metadata/xmp-parse.c
	* plug-ins/metadata/metadata.c
	* plug-ins/metadata/xmpdump.c: removal of unused includes and
	other minor cleanups.

2008-10-19  Martin Nordholts  <martinn@svn.gnome.org>

	* app/gegl/gimpoperationadditionmode.c: Remove local channel
	offset defines.

2008-10-19  Martin Nordholts  <martinn@svn.gnome.org>

	* app/gegl/gimpoperation*mode.c: Refer to the input as 'in'
	instead of 'src', the layer as 'layer' instead of 'aux', and the
	result as 'out' instead of 'dest'.

2008-10-19  Martin Nordholts  <martinn@svn.gnome.org>

	* app/base/base-types.h: Rename the convenient channel offset
	defines from CHANNEL_PIX to CHANNEL as this increases readability.

	* app/base/color-balance.c
	* app/base/colorize.c
	* app/base/desaturate.c
	* app/base/hue-saturation.c
	* app/base/siox.c
	* app/base/threshold.c

	* app/core/gimp-edit.c
	* app/core/gimp-transform-region.c
	* app/core/gimpchannel.c
	* app/core/gimpdrawable-bucket-fill.c
	* app/core/gimpdrawable-convert.c
	* app/core/gimpdrawable-stroke.c
	* app/core/gimpdrawable.c
	* app/core/gimpimage-convert.c
	* app/core/gimpimage.c
	* app/core/gimppalette-import.c
	* app/core/gimppickable.c

	* app/gegl/gimpoperation*mode.c
	* app/gegl/gimpoperationcolorbalance.c
	* app/gegl/gimpoperationcolorize.c
	* app/gegl/gimpoperationhuesaturation.c
	* app/gegl/gimpoperationlevels.c
	* app/gegl/gimpoperationposterize.c
	* app/gegl/gimpoperationthreshold.c

	* app/paint-funcs/subsample-region.c

	* app/paint/gimpclone.c
	* app/paint/gimppaintbrush.c

	* app/widgets/gimpviewrenderer.c: Adapt.

2008-10-19  Sven Neumann  <sven@gimp.org>

	Bug 493778 – metadata plug-in crashes on some images

	* plug-ins/metadata/xmp-encode.c (gen_property): introduced a
	utility function to create XML elements. Deal gracefully with NULL
	and empty values. Does not fix the crash, but fixes a warning that
	has been reported in the same bug report.
